added_javadoc