@@ -5,6 +5,7 @@ import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 final class AnnotationUtils {
@@ -14,12 +15,12 @@ final class AnnotationUtils {
     public static List<Method> getAnnotatedMethods(Class<?> clazz, Class<? extends Annotation> annotation) {
         return Arrays.stream(clazz.getDeclaredMethods())
                 .filter(method -> method.isAnnotationPresent(annotation))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static List<Field> getAnnotatedFields(Class<?> clazz, Class<? extends Annotation> annotation) {
         return Arrays.stream(clazz.getDeclaredFields())
                 .filter(method -> method.isAnnotationPresent(annotation))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
